src/App.scss
/* ... */
@mixin mq($from) {
  @media (max-width: $from) {
    @content;
  }
}

//// Darkmode ///////////////////////////////////////////////////////////////////////////////////
.darkmode {
  header {
    -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
    background-color: #282828;
    border-color: transparent;
  }
}

//// Header ////////////////////////////////////////////////////////////////////////////////////
header {
  border-bottom: solid 1px #ca2100;
  background-color: $generic-bg;
  -webkit-transition: height 200ms ease-in;
  transition: height 200ms ease-in;
  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
  height: 44px;
  z-index: 400;
  position: fixed;
  top: 0;
  width: 100%;

  @include mq("900px") {
    padding: 0 10px;
  }
}
nav {
  display: grid;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr;
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  max-width: 922px;
  margin: auto;
  height: 44px;

  p,
  li {
    color: white;
  }

  div {
    &.logo {
      padding-left: 8px;
      grid-area: 1 / 1;

      img {
        width: 24px;
      }
    }

    &.settings {
      grid-area: 1 / 2;
      text-align: right;

      ul {
        float: right;
      }

      ul li {
        @include va;

        list-style-type: none;
        cursor: pointer;
        width: 30px;
        height: 30px;
        text-align: center;
        vertical-align: middle;
        float: left;

        &:hover {
          border-radius: 3px;
          background-color: rgba(255, 255, 255, 0.2);
        }

        &.settings__add {
          margin-right: 15px;
          font-size: 30px;

          button {
            @include transparent-button();
            color: white;
            cursor: pointer;
          }
        }

        &.settings__darkmode {
          button {
            @include transparent-button();
            color: white;
            cursor: pointer;
            display: -webkit-box;
            display: -ms-flexbox;
            display: flex;

            svg {
              width: 20px;
              height: 20px;
            }
          }
        }
      }
    }
  }
}

//// Sidebar /////////////////////////////////////////////////////////////////////////////////////

.sidebar {
  @include no-select();
  width: 266px;
  height: calc(100vh);
  padding-top: 74px;
  position: fixed;
  overflow-x: hidden;
  overflow-y: hidden;
  border-right: $generic-border;
  background-color: #fafafa;

  @include mq("900px") {
    display: none;
  }

  li {
    padding-left: 10px;
    padding-right: 15px;

    &:hover .sidebar__project-delete {
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
    }
  }

  &__project {
    padding: 5px 0;
    margin-bottom: 2px;
    cursor: pointer;

    div:nth-child(1) {
      padding: 5px 0;
      padding-left: 10px;
      padding-right: 15px;
      width: 100%;
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
      flex-direction: column;
      -webkit-box-align: center;
      -ms-flex-align: center;
      align-items: center;
      background-color: rgba(255, 255, 255, 0.6);
    }

    &-delete {
      margin-left: auto;
      display: none;

      svg {
        color: #cacaca;
      }
    }

    &.active,
    &:hover {
      font-weight: bold;
      background-color: white;
    }

    &:nth-child(1) {
      .sidebar__dot {
        color: #6accbc;
      }
    }
    &:nth-child(2) {
      .sidebar__dot {
        color: #fad003;
      }
    }
    &:nth-child(3) {
      .sidebar__dot {
        color: #ff8d85;
      }
    }
    &:nth-child(4) {
      .sidebar__dot {
        color: #ff9932;
      }
    }
    &:nth-child(5) {
      .sidebar__dot {
        color: #af38eb;
      }
    }
  }

  &__projects {
    padding-left: 3px;
  }

  &__project {
    @include va("left");
  }

  &__dot {
    margin-right: 10px;
    font-size: 30px;
  }

  &__middle {
    margin-top: 20px;
    margin-bottom: 20px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    border-bottom: $generic-border;
    padding-left: 10px;
    cursor: pointer;

    span {
      color: #0000008a;
      margin-right: 10px;

      svg.hidden-projects {
        -webkit-transform: rotate(-90deg);
        transform: rotate(-90deg);
      }
    }

    h2 {
      margin: 0;
      color: #333;
      font-size: 15px;
      font-weight: bold;
      padding-bottom: 20px;
    }
  }

  &__generic {
    li {
      list-style-type: none;
      color: #333;
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
      cursor: pointer;
      line-height: 1.5;
      font-size: 15px;
      padding-left: 0;
      padding-right: 0;
      margin-bottom: 10px;

      div:nth-child(1) {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        padding: 10px 0 10px 10px;
        width: 100%;

        span:first-of-type {
          margin-right: 10px;
          display: -webkit-box;
          display: -ms-flexbox;
          display: flex;
          -webkit-box-align: center;
          -ms-flex-align: center;
          align-items: center;

          svg {
            width: 18px;
            height: 18px;
            color: #555;
          }
        }
      }

      &.active,
      &:hover {
        font-weight: bold;
        background-color: white;
      }
    }
    &-icon {
      margin-top: 2px;
      margin-right: 10px;
      margin-left: 10px;
    }
  }
}
/* ... */

